@@ -1,3 +1,8 @@
+2009-10-13  Andreas Schwab  <schwab@redhat.com>
+
+	* csu/elf-init.c (__libc_csu_init): Run preinit array even if
+	!USE_MULTIARCH.
+
 2009-10-08  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #10730]
